--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Nacional CS </title>
+  <title>Notificacion de consultas </title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/unicons.css">
@@ -25,7 +25,7 @@
   <!-- MENU -->
   <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class='uil uil-user'></i> Nacional Club Social</a>
+      <a class="navbar-brand" href="index.html"><i class='uil uil-user'></i> Notificacion de consultas</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,63 +44,23 @@
           </li>
         </ul>
 
-        <ul class="navbar-nav ml-lg-auto">
 
-          <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;"
-            id="botonLogin">Login</button>
-          <h3 id="msgNombreLogueado" style="display:none;">Nombre</h1>
-
-        </ul>
       </div>
     </div>
   </nav>
 
 
   <!-- LOGIN -->
-
-  <div id="id01" class="modal">
-
-    <div class="modal-content animate">
-      <div class="imgcontainer">
-        <span onclick="document.getElementById('id01').style.display='none'" class="close"
-          title="Close Modal">&times;</span>
-        <img src="images/NacClubSocial.png" alt="Avatar" class="avatar">
-      </div>
-
-      <div class="container">
-        <label for="uname"><b>Username</b></label>
-        <input type="text" id="nameInput" placeholder="Enter Username" name="uname" required>
-
-        <label for="psw"><b>Password</b></label>
-        <input type="password" id="passwordInput" placeholder="Enter Password" name="psw" required>
-        <label id="validCredential" style="color: red; display: none;"><b>Usuario/contraseña incorrectas.</b></label>
-        <label id="validCredentialLastname" style="color: red; display: none;"><b>Su usuario no está habilitado para
-            usar esta web.</b></label>
-
-        <button onclick="iniciarSesion()">Iniciar sesión</button>
-      </div>
-    </div>
+  <div>
+    <object data="components/InicioSesion.html" style="height: 100%; width: 100%;"></object>
   </div>
 
 
+
   <!-- Ultimas ejecuciones -->
-
-  <section class="project py-5" id="SecEjecuciones">
-    <div class="container">
-
-      <div class="row">
-        <div class="" style="text-align:left">
-
-          <div class="mx-auto">
-            <h2>Ultimas ejecuciones</h2>
-            <div id="sysEjecuciones">
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <div>
+    <object data="components/lastExcecutions.html" style="height: 100%; width: 100%;"></object>
+  </div>
 
   <!-- FOOTER -->
   <object data="components/footer.html"></object>
@@ -111,76 +71,6 @@
   <script src="js/acordion.js"></script>
 
   <script>
-    // Get the modal
-    var modal = document.getElementById('id01');
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function (event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-
-
-    function procesarInicioSesion() {
-      var userName = localStorage.getItem('userName');
-      if (userName && userName != 'undefined') {
-        document.getElementById('msgNombreLogueado').innerHTML = userName;
-        document.getElementById('msgNombreLogueado').style.display = "Block";
-        document.getElementById('botonLogin').style.display = "None";
-        document.getElementById('actTitulo').style.display = "Block";
-      }
-    }
-
-
-    function iniciarSesion() {
-      let params = JSON.stringify({
-        user: document.getElementById('nameInput').value,
-        password: document.getElementById('passwordInput').value,
-      });
-
-      const http = new XMLHttpRequest()
-      http.open('POST', '/users/contacto')
-      // http.setRequestHeader('Authorization', 'Bearer 288abceb-0a1a-4095-9f79-89d57d4c0ba9')
-      http.setRequestHeader('Accept', '*/*')
-      http.setRequestHeader('Content-type', 'application/json')
-      http.setRequestHeader('Content-type', 'text/plain')
-      http.send(JSON.stringify(params)) // Make sure to stringify
-      http.send(params) // Make sure to stringify
-
-
-
-    }
-
-
-    function buscarCategorias() {
-      var token = localStorage.getItem('token');
-      if (token) {
-        document.getElementById('msgNoLogueado').style.display = "None";
-
-        var userId = localStorage.getItem('userId');
-
-        const http = new XMLHttpRequest()
-        http.open('GET', 'https://api-agenda.nacionalclubsocial.uy/activitycategory')
-        http.setRequestHeader('Authorization', 'Bearer ' + token)
-        http.setRequestHeader('Accept', '*/*')
-        http.setRequestHeader('Content-type', 'application/json')
-        http.send()
-        http.onload = function () {
-
-          let listaCategorias = JSON.parse(http.responseText).description;
-          // Do whatever with response
-          for (const cat of listaCategorias) {
-
-            var divActividades = document.getElementById('divCategorias').innerHTML +=
-              "<button class='accordion' onclick='actividades(\"" + cat.id + "\")'>" + cat.name + "</button>" +
-              "<div class='panel' id='panel" + cat.id + "'>" +
-              "</div>";
-          }
-          accordionAcordion();
-        }
-      }
-    }
 
     function actividades(actId) {
       var token = localStorage.getItem('token');
@@ -247,36 +137,6 @@
       }
     }
 
-
-    function buscarLogs() {
-
-      const http = new XMLHttpRequest()
-      http.open('GET', '/audit/')
-      http.setRequestHeader('Accept', '*/*')
-      http.setRequestHeader('Content-type', 'application/json')
-      http.send()
-      http.onload = function () {
-        let listaLogs = JSON.parse(http.responseText);
-        // Do whatever with response
-        document.getElementById('sysEjecuciones').innerHTML = "";
-        for (const log of listaLogs) {
-
-          document.getElementById('sysEjecuciones').innerHTML +=
-            "<p> " + log.type + "  -  Fecha:" + log.dateTime.split("T")[0] +
-            " hora: " + log.dateTime.split("T")[1].substring(0, 5) + "hs" + "</p>"
-        }
-      }
-    }
-
-
-
-
-
-
-
-    // procesarInicioSesion();
-    // buscarCategorias();
-    buscarLogs()
   </script>
 
 
