--- a/public/query/my-queries.html
+++ b/public/query/my-queries.html
@@ -29,6 +29,9 @@
 
 
   EN QUERYYYY
+  <div id="divConsultas">
+
+  </div>
 
   <!-- FOOTER -->
   <iframe src="/components/footer.html"
@@ -36,9 +39,8 @@
 
 
   <script src="/js/jquery-3.3.1.min.js"></script>
-  <script src="/js/inicioSesion.js"></script>
+  <!-- <script src="/js/inicioSesion.js"></script> -->
   <script src="/js/consultas.js"></script>
-  <script src="/js/lastExcecutions.js"></script>
 
 
 
