--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,13 @@
 
   <!-- MAIN STYLE -->
   <link rel="stylesheet" href="css/tooplate-style.css">
+
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/Headroom.js"></script>
+  <script src="js/jQuery.headroom.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/acordion.js"></script>
+
 </head>
 
 <body>
@@ -32,7 +39,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mx-auto" style="display: none;" id="headerTabs">
+        <ul class="navbar-nav mx-auto" id="headerTabs">
           <li class="nav-item">
             <a href="/query/my-queries" class="nav-link"><span data-hover="Consultas">Consultas</span></a>
           </li>
